--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hadith",
   "displayName": "Hadith",
-  "description": "Get a Hadith from the Sunnah during your coding session 💻 stay connected with Sayings and Teachings of the Prophet Muhammad (ﷺ) 🕌💚 ",
+  "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
   "version": "0.0.1",
   "icon": "",
   "repository": {
