--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Hadith",
   "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
   "version": "0.0.3",
-  "icon": "",
+  "icon": "../assets/images/icon.png",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SABER-MOHAMED/Hadith"
@@ -34,7 +34,7 @@
         "command": "hadith.getHadith",
         "category": "Hadith",
         "title": "Get Hadith",
-        "icon": ""
+        "icon": "./assets/images/icon.png"
       }
     ],
     "configuration": {
