--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "hadith",
   "displayName": "Hadith",
   "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
-  "version": "0.0.3",
-  "icon": "../assets/images/icon.png",
+  "version": "0.0.4",
+  "icon": "assets/icon.png",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SABER-MOHAMED/Hadith"
@@ -34,7 +34,7 @@
         "command": "hadith.getHadith",
         "category": "Hadith",
         "title": "Get Hadith",
-        "icon": "./assets/images/icon.png"
+        "icon": "./assets/icon.png"
       }
     ],
     "configuration": {
