--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "hadith",
   "displayName": "Hadith",
   "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "icon": "assets/icon.png",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SABER-MOHAMED/Hadith"
+    "url": "git+https://github.com/SABER-MOHAMED/Hadith.git"
   },
   "publisher": "MohamedSaber",
   "author": "Mohamed Saber <mrsabermed@gmail.com>",
@@ -25,7 +25,8 @@
     "Islam"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "*",
+    "onCommand:hadith.getHadith"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -34,7 +35,7 @@
         "command": "hadith.getHadith",
         "category": "Hadith",
         "title": "Get Hadith",
-        "icon": "./assets/icon.png"
+        "icon": "assets/icon.png"
       }
     ],
     "configuration": {
