--- a/package.json
+++ b/package.json
@@ -39,17 +39,18 @@
     ],
     "configuration": {
       "type": "object",
-      "title": "Hadith configuration",
+      "title": "Hadith",
       "properties": {
         "hadith.repeatedEveryMinute": {
           "type": "number",
-          "default": "1",
+          "default": 20,
           "enum": [
-            "20",
-            "30",
-            "40",
-            "50",
-            "60"
+            10,
+            20,
+            30,
+            40,
+            50,
+            60
           ],
           "description": "Select time between Hadith notifications."
         },
