--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "hadith",
   "displayName": "Hadith",
   "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
-  "icon": "images/icon.png",
+  "icon": "./images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/SABER-MOHAMED/Hadith"
@@ -37,8 +37,8 @@
         "category": "Hadith",
         "title": "Get Hadith",
         "icon": {
-          "light": "images/icon.png",
-          "dark": "images/icon.png"
+          "light": "./images/icon.png",
+          "dark": "./images/icon.png"
         }
       }
     ],
@@ -48,8 +48,9 @@
       "properties": {
         "hadith.repeatedEveryMinute": {
           "type": "number",
-          "default": "1",
+          "default": "20",
           "enum": [
+            "10",
             "20",
             "30",
             "40",
