--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get a Hadith from the Sunnah while you're coding 💻 keep in touch with the Sayings and Teachings of the Prophet Muhammed (ﷺ) 🕌💚",
   "version": "0.1.2",
   "license": "MIT",
-  "icon": "./images/icon.png",
+  "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/SABER-MOHAMED/Hadith"
@@ -37,8 +37,8 @@
         "category": "Hadith",
         "title": "Get Hadith",
         "icon": {
-          "light": "./images/icon.png",
-          "dark": "./images/icon.png"
+          "light": "images/icon.png",
+          "dark": "images/icon.png"
         }
       }
     ],
